--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Airbnb Clone</title>
   </head>
   <body>
+    <!--This script will run if the user doesn't have js installed or active-->
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
